Fix T45729: Cycles Bake break when building a special mesh

The issue was caused by CD_SHAPEKEY_INDEX layer being added to edge data,
now we make sure all the layers are nicely re-allocated.