source/blender/blenkernel/intern/customdata.c
@@ -1504,6 +1504,23 @@ bool CustomData_merge(const struct CustomData *source, struct CustomData *dest,
 	return changed;
 }
 
+/* NOTE: Take care of referenced layers by yourself! */
+void CustomData_realloc(CustomData *data, int totelem)
+{
+	int i;
+	for (i = 0; i < data->totlayer; ++i) {
+		CustomDataLayer *layer = &data->layers[i];
+		const LayerTypeInfo *typeInfo;
+		int size;
+		if (layer->flag & CD_FLAG_NOFREE) {
+			continue;
+		}
+		typeInfo = layerType_getInfo(layer->type);
+		size = totelem * typeInfo->size;
+		layer->data = MEM_reallocN(layer->data, size);
+	}
+}
+
 void CustomData_copy(const struct CustomData *source, struct CustomData *dest,
                      CustomDataMask mask, int alloctype, int totelem)
 {
