source/blender/blenkernel/intern/mesh.c
@@ -2237,7 +2237,7 @@ void BKE_mesh_split_faces(Mesh *mesh)
 		BKE_mesh_calc_normals_split(mesh);
 	}
 	lnors = CustomData_get_layer(&mesh->ldata, CD_NORMAL);
-	/* Count. */
+	/* Count number of vertices to be split. */
 	for (poly = 0; poly < num_polys; poly++) {
 		MPoly *mp = &mpoly[poly];
 		int loop;
@@ -2255,19 +2255,16 @@ void BKE_mesh_split_faces(Mesh *mesh)
 		/* No new vertices are to be added, can do early exit. */
 		return;
 	}
-	/* Actual split. */
+	/* Reallocate all vert and edge related data. */
 	mesh->totvert += num_new_verts;
 	mesh->totedge += 2 * num_new_verts;
-	mvert = mesh->mvert = MEM_reallocN(mesh->mvert,
-	                                   sizeof(MVert) * mesh->totvert);
-	medge = mesh->medge = MEM_reallocN(mesh->medge,
-	                                   sizeof(MEdge) * mesh->totedge);
-	if (mesh->dvert != NULL) {
-		mesh->dvert = MEM_reallocN(mesh->dvert, sizeof(MDeformVert) * mesh->totvert);
-		CustomData_set_layer(&mesh->vdata, CD_MDEFORMVERT, mesh->dvert);
-	}
-	CustomData_set_layer(&mesh->vdata, CD_MVERT, mesh->mvert);
-	CustomData_set_layer(&mesh->edata, CD_MEDGE, mesh->medge);
+	CustomData_realloc(&mesh->vdata, mesh->totvert);
+	CustomData_realloc(&mesh->edata, mesh->totedge);
+	/* Update pointers to a newly allocated memory. */
+	BKE_mesh_update_customdata_pointers(mesh, false);
+	mvert = mesh->mvert;
+	medge = mesh->medge;
+	/* Perform actual vertex split. */
 	num_new_verts = 0;
 	for (poly = 0; poly < num_polys; poly++) {
 		MPoly *mp = &mpoly[poly];
